--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <div class="cards-heading">
         <h1>Najnowsze oferty</h1>
-        <h4>Zobacz więcej ofert</h4>
+        <!-- <h4>Zobacz więcej ofert</h4> -->
     </div>
 
     <section class="cards">
